# Configurando-o-Django-Rest-Framework

./: docker-compose.yml  env.dev  pyproject.toml  pytest.ini
.github/workflows/: build.yml
DRF/: settings.py  urls.py
api/: factories.py  urls.py
api/migrations/: 0001_initial.py  0002_order.py  0003_delete_user.py
api/models/: user.py
api/serializers/: __init__.py  order_serializer.py  product_serializer.py  user_serializer.py
api/tests/test_viewsets/: test_order_viewset.py  test_product_viewset.py  test_user_viewset.py
api/tests/tests_models/: test_product.py  test_user.py
api/tests/tests_serializers/: test_product_serializers.py  test_user_serializers.py
api/viewsets/: __init__.py  order_viewset.py  product_viewset.py  user_viewset.py
